--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,26 +15,33 @@ jobs:
     # Required services    
     services:
       # Label used to access the service container
-      redis:
-        # Docker Hub image
-        image: redis
-        # Set health checks to wait until redis has started
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: testdb
+        ports:
+          - 5432:5432
+        # Set health checks to wait until postgres has started
         options: >-
-          --health-cmd "redis-cli ping"
+          --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
 
-    # Steps for the build
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-            
+      
+      - name: Install libraries for PostgreSQL
+        run: |
+          apt-get update
+          apt-get install -y gcc libpq-dev
+
       - name: Install dependencies
         run: |
-          python -m pip install poetry
-          poetry config virtualenvs.create false
-          poetry install
+          python -m pip install --upgrade pip wheel
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Linting
         run: |
@@ -44,11 +51,14 @@ jobs:
           flake8 service tests --count --max-complexity=10 --max-line-length=127 --statistics
           # Run pylint to catch other PEP8 errors
           pylint service tests --max-line-length=127
-
-      - name: Run unit tests with PyTest
-        run: pytest --pspec --cov=service --cov-fail-under=95
+          
+      # changing to nose
+      - name: Run unit tests 
+        run: |
+          export FLASK_APP=service:app
+          green -vvv --processes=1 --run-coverage --termcolor --minimum-coverage=95
         env:
-          DATABASE_URI: "redis://redis:6379"
+          DATABASE_URI: "postgresql://postgres:postgres@postgres:5432/testdb"
 
       # Uncomment the following 2 lines during hands-on lab
       
