--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,12 @@ pylint==2.16.2
 flake8==6.0.0
 black==23.1.0
 
+# Behavior Driven Development
+behave==1.2.6
+selenium==4.10.0
+compare==0.2b0
+requests==2.31.0
+
 # Testing dependencies
 green==3.4.3
 factory-boy==3.2.1
