--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,7 @@
 # Image for a NYU Lab development environment
 FROM rofrano/nyu-devops-base:fa23
+# This image has selenium and chrome driver already installed
+FROM rofrano/pipeline-selenium:latest
 
 # Set up the Python development environment
 WORKDIR /app
