Add Dockerfile. Update yamls

--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -1,3 +1,8 @@
+# These can also be created from the command line using environment variables
+#
+# kubectl create secret generic postgres-creds --from-literal=uri=$DATABASE_URI
+#
+---
 apiVersion: v1
 kind: Secret
 metadata:
