--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -2,11 +2,9 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: postgres
-  labels:
-    app: postgres
+  name: postgres-statefulset
 spec:
-  serviceName: "postgres"
+  serviceName: postgres
   replicas: 1
   selector:
     matchLabels:
@@ -19,23 +17,42 @@ spec:
       containers:
         - name: postgres
           image: postgres:alpine
-          ports:
-            - containerPort: 5432
-              protocol: TCP
           env:
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: postgres-creds
                   key: password
+          ports:
+            - containerPort: 5432
+              protocol: TCP
           volumeMounts:
           - name: postgres-storage
-            mountPath: /var/lib/postgresql/data
-
+            mountPath: /data
+          resources:
+            limits:
+              cpu: "0.50"
+              memory: "128Mi"
+            requests:
+              cpu: "0.25"        
+              memory: "64Mi"
       volumes:
       - name: postgres-storage
-        emptyDir: {}
+        persistentVolumeClaim:
+          claimName: postgres-data
 
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-data
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: ""
 
 ---
 apiVersion: v1
@@ -45,9 +62,8 @@ metadata:
   labels:
     app: postgres
 spec:
-  type: ClusterIP
+  ports:
+  - port: 5432
+    targetPort: 5432
   selector:
     app: postgres
-  ports:
-    - port: 5432
-      targetPort: 5432
