Add port to env

--- a/.github/workflows/bdd-test.yml
+++ b/.github/workflows/bdd-test.yml
@@ -57,6 +57,7 @@ jobs:
           echo "\n*** SERVER IS RUNNING ***"
         env:
           DATABASE_URI: "postgresql://postgres:pgs3cr3t@postgres:5432/testdb"
+          BASE_URL: "localhost:8000"
 
       - name: Run Integration Tests
         run: behave
