--- a/.tekton/pipeline.yaml
+++ b/.tekton/pipeline.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: cd-pipeline
 spec:
+  workspaces:
+    - name: pipeline-workspace
   params:
     - description: The URL to the git repo
       name: GIT_REPO
@@ -10,6 +12,19 @@ spec:
     - default: master
       description: The reference (branch or ref)
       name: GIT_REF
+      type: string
+    - default: '-vvv --processes=1 --run-coverage --minimum-coverage=95'
+      description: Arguments for green testing
+      name: GREEN_ARGS
+      type: string
+    - default: petshop
+      description: Name of the application
+      name: APP_NAME
+      type: string
+    - default: >-
+        image-registry.openshift-image-registry.svc:5000/$(context.pipelineRun.namespace)/$(params.APP_NAME):latest
+      description: The name of the image to build
+      name: IMAGE_NAME
       type: string
   tasks:
     - name: git-clone
@@ -44,16 +59,33 @@ spec:
           value: 'true'
         - name: gitInitImage
           value: >-
-            gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/git-init:v0.40.2
+            registry.redhat.io/openshift-pipelines/pipelines-git-init-rhel8@sha256:1a50511583fc02a27012d17d942e247813404104ddd282d7e26f99765174392c
         - name: userHome
           value: /home/git
       taskRef:
-        kind: Task
+        kind: ClusterTask
         name: git-clone
       workspaces:
         - name: output
           workspace: pipeline-workspace
-  workspaces:
-    - name: pipeline-workspace
-      optional: false
-  finally: []
+    - name: pylint
+      params:
+        - name: image
+          value: 'docker.io/python:3.11-slim'
+        - name: path
+          value: service
+        - name: requirements_file
+          value: requirements.txt
+        - name: args
+          value: []
+        - name: pip_conf_file
+          value: pip.conf
+      runAfter:
+        - git-clone
+      taskRef:
+        kind: Task
+        name: pylint
+      workspaces:
+        - name: source
+          workspace: pipeline-workspace
+  
