--- a/.tekton/pipeline.yaml
+++ b/.tekton/pipeline.yaml
@@ -3,8 +3,6 @@ kind: Pipeline
 metadata:
   name: cd-pipeline
 spec:
-  workspaces:
-    - name: pipeline-workspace
   params:
     - description: The URL to the git repo
       name: GIT_REPO
@@ -12,19 +10,6 @@ spec:
     - default: master
       description: The reference (branch or ref)
       name: GIT_REF
-      type: string
-    - default: '-vvv --processes=1 --run-coverage --minimum-coverage=95'
-      description: Arguments for green testing
-      name: GREEN_ARGS
-      type: string
-    - default: petshop
-      description: Name of the application
-      name: APP_NAME
-      type: string
-    - default: >-
-        image-registry.openshift-image-registry.svc:5000/$(context.pipelineRun.namespace)/$(params.APP_NAME):latest
-      description: The name of the image to build
-      name: IMAGE_NAME
       type: string
   tasks:
     - name: git-clone
@@ -71,7 +56,7 @@ spec:
     - name: pylint
       params:
         - name: image
-          value: 'docker.io/python:3.11-slim'
+          value: 'rofrano/nyu-devops-base:fa23'
         - name: path
           value: service
         - name: requirements_file
@@ -88,4 +73,7 @@ spec:
       workspaces:
         - name: source
           workspace: pipeline-workspace
-  
+  workspaces:
+    - name: pipeline-workspace
+      optional: false
+  finally: []
