--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -2,9 +2,11 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: postgres-statefulset
+  name: postgres
+  labels:
+    app: postgres
 spec:
-  serviceName: postgres
+  serviceName: "postgres"
   replicas: 1
   selector:
     matchLabels:
@@ -17,42 +19,53 @@ spec:
       containers:
         - name: postgres
           image: postgres:15-alpine
+          ports:
+            - containerPort: 5432
+              protocol: TCP
           env:
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: postgres-creds
                   key: password
-          ports:
-            - containerPort: 5432
-              protocol: TCP
+            - name: POSTGRES_USER
+              valueFrom:
+                configMapKeyRef:
+                  name: postgres-config
+                  key: postgres_user
+            - name: POSTGRES_DB
+              valueFrom:
+                configMapKeyRef:
+                  name: postgres-config
+                  key: postgres_db
           volumeMounts:
-          - name: postgres-storage
-            mountPath: /var/lib/postgresql
+            - name: postgres-storage
+              mountPath: /var/lib/postgresql
           resources:
             limits:
               cpu: "0.50"
               memory: "128Mi"
             requests:
-              cpu: "0.25"        
+              cpu: "0.25"
               memory: "64Mi"
       volumes:
-      - name: postgres-storage
-        persistentVolumeClaim:
-          claimName: postgres-data
+        - name: postgres-storage
+          persistentVolumeClaim:
+            claimName: postgres-pvc
+          # emptyDir: {}
 
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-data
+  name: postgres-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-  # storageClassName: ""
+  # storageClassName: default
 
 ---
 apiVersion: v1
@@ -62,8 +75,36 @@ metadata:
   labels:
     app: postgres
 spec:
-  ports:
-  - port: 5432
-    targetPort: 5432
+  type: ClusterIP
   selector:
     app: postgres
+  ports:
+    - port: 5432
+      targetPort: 5432
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: postgres-config
+data:
+  postgres_user: postgres
+  postgres_db: postgres
+---
+# This secret can also be created from the command line using environment variables
+#
+# export DATABASE_URI='postgresql+psycopg://<place-url-to-database-here>'
+# export POSTGRES_PASSWORD='<place-password-here>'
+#
+# kubectl create secret generic postgres-creds \
+#     --from-literal=password=$POSTGRES_PASSWORD
+#     --from-literal=database_uri=$DATABASE_URI
+#
+apiVersion: v1
+kind: Secret
+metadata:
+  name: postgres-creds
+data:
+  password: cG9zdGdyZXM=
+  database_uri: |
+    cG9zdGdyZXNxbCtwc3ljb3BnOi8vcG9zdGdyZXM6cG9zdGdyZXNAcG9zdGdyZXM6NTQzMi9wb3N0Z3Jlcw==
