--- a/.tekton/tasks.yaml
+++ b/.tekton/tasks.yaml
@@ -49,7 +49,8 @@ spec:
 
         echo "***** Install PostgreSQL libraries *****"
         apt-get update
-        apt-get install -y gcc libpq-dev
+        apt-get install -y libpq-dev
+        apt-get install -y gcc
 
         echo "***** Installing dependencies *****"
         python -m pip install --upgrade pip wheel
