--- a/.tekton/pipeline.yaml
+++ b/.tekton/pipeline.yaml
@@ -107,6 +107,7 @@ spec:
           value: 'false'
       runAfter:
         - pylint
+        - green
       taskRef:
         kind: ClusterTask
         name: buildah
@@ -126,6 +127,22 @@ spec:
       taskRef:
         kind: Task
         name: deploy-image
+      workspaces:
+        - name: source
+          workspace: pipeline-workspace
+    - name: green
+      params:
+        - name: ARGS
+          value: '-vvv --processes=1 --run-coverage --minimum-coverage=95'
+        - name: SECRET_NAME
+          value: postgres-creds
+        - name: SECRET_KEY
+          value: database_uri
+      runAfter:
+        - git-clone
+      taskRef:
+        kind: Task
+        name: green
       workspaces:
         - name: source
           workspace: pipeline-workspace
