--- a/.github/workflows/bdd-test.yml
+++ b/.github/workflows/bdd-test.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel
+          pip install psycopg2
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run the service locally
