Add testing to roll back

--- a/.tekton/pipeline.yaml
+++ b/.tekton/pipeline.yaml
@@ -20,6 +20,10 @@ spec:
       description: The name of the image to build
       name: IMAGE_NAME
       type: string
+    - default: '-vvv --processes=1 --run-coverage --minimum-coverage=95'
+      description: Arguments for green testing
+      name: GREEN_ARGS
+      type: string
   tasks:
     - name: git-clone
       params:
@@ -82,6 +86,22 @@ spec:
       workspaces:
         - name: source
           workspace: pipeline-workspace
+    - name: testing
+      params:
+        - name: ARGS
+          value: $(params.GREEN_ARGS)
+        - name: SECRET_NAME
+          value: postgres-creds
+        - name: SECRET_KEY
+          value: database_uri
+      runAfter:
+        - git-clone
+      taskRef:
+        kind: Task
+        name: green
+      workspaces:
+        - name: source
+          workspace: pipeline-workspace
     - name: buildah
       params:
         - name: IMAGE
@@ -107,6 +127,7 @@ spec:
           value: 'false'
       runAfter:
         - pylint
+        - testing
       taskRef:
         kind: ClusterTask
         name: buildah
