--- a/.tekton/tasks.yaml
+++ b/.tekton/tasks.yaml
@@ -49,7 +49,7 @@ spec:
         echo "***** Installing dependencies *****"
         python -m pip install --upgrade pip wheel
         pip install -qr requirements.txt
-
+        export PATH="$PATH:/home/vscode/.local/bin"
         echo "***** Running Tests *****"
         green $(params.ARGS)
 
@@ -111,3 +111,37 @@ spec:
           echo "Pods:"
           oc get pods
           echo ""
+
+---
+apiVersion: tekton.dev/v1beta1
+kind: Task
+metadata:
+  name: behave-task
+  labels:
+    app.kubernetes.io/version: "0.1"
+  annotations:
+    tekton.dev/categories: Testing
+    tekton.dev/pipelines.minVersion: "0.17.0"
+    tekton.dev/tags: integration, testing, behave
+    tekton.dev/displayName: "Run Behave Tests"
+    tekton.dev/platforms: "linux/amd64"
+spec:
+  workspaces:
+    - name: source
+  steps:
+    - name: run-behave
+      image: quay.io/rofrano/pipeline-selenium:latest
+      workingDir: $(workspaces.source.path)
+      env:
+       - name: BASE_URL
+         value: https://shopcarts-alex955-dev.apps.sandbox-m4.g2pi.p1.openshiftapps.com/
+      script: |
+        #!/bin/bash
+        set -e
+        echo "***** Installing dependencies *****"
+        python -m pip install --upgrade pip wheel
+        pip install -qr requirements.txt
+        export PATH="$PATH:/home/vscode/.local/bin"
+        echo "***** Running Tests *****"
+        behave
+
